--- a/lesson5/3.html
+++ b/lesson5/3.html
@@ -70,7 +70,6 @@
 
     window.addEventListener("load", () => console.log("страница загрузилась"));
 
-
     /*
     3. При клике на какой-либо тег на странице в консоль должно выводиться
     сообщение наподобие:
@@ -81,11 +80,9 @@
     Необходимо использовать делегирование.
     */
     document.addEventListener('click', (event) => {
-      if (event.target.className === "super_element") {
-        console.log(`Класс "super_element" есть в элементе ${event.target.localName}`)
-      } else {
-        console.log(`Класса "super_element" нет в элементе ${event.target.localName}`)
-      }
+      const strContain = event.target.classList.contains('super_element') ?
+        "присутствует" : "отсутствует";
+      console.log(`Класс "super_element" ${strContain} в элементе ${event.target.localName}`);
     })
     /*
     4. Сделайте, чтобы при наведении на textarea в консоли появлялось сообщение:
@@ -94,7 +91,7 @@
     document.querySelector('textarea').addEventListener('mouseover',
       (event) => {
         console.log('Вы навели на textarea.');
-      })
+      });
 
     /*
     5. Необходимо повесить событие клика на тег ul. В обработчике события в
@@ -116,10 +113,11 @@
     потом выводится текст из 3 задания, если мы кликаем по кнопкам в ul?
     Ответ необходимо написать здесь же, под этим комментарием, своими словами.
     
-    ответ: сначала выполняется обработчик события, который непосредственно 
-    установлен на эти кнопки, то есть задание 5. А потом происходит всплытие 
-    события и выполняется обработчик, который установлен на весь документ, 
-    задание 3
+    ответ: после нажатия на кнопку сначала происходит всплытие события до
+    родителя <ul> и сначала выполняется обработчик события, который
+    установлен на <ul>, то есть задание 5. А потом происходит всплытие
+    события до <body> и еще дальше до document и выполняется обработчик,
+    который установлен на весь документ, то есть задание 3
     */
 
 
