--- a/lesson7/4.html
+++ b/lesson7/4.html
@@ -27,9 +27,10 @@
       this.width = width;
       this.height = height;
     }
+
     Rectangle.prototype.getArea = function () {
-      return (this.width * this.height);
-    }
+      return this.width * this.height;
+    };
 
 
     const r = new Rectangle(10, 20);
